# cat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  buffer.hpp  cat.hpp  cat_checklist.inipp  config.hpp  drawcalls.hpp  drawing.hpp  effects.hpp  example.cpp  id.hpp  input.hpp  library.hpp  lifespan.hpp  poxy.toml  signals.hpp  string.hpp  string_iterator.hpp  stringtest.cpp  terminal.hpp  test.cpp  vector.hpp  window.hpp  windowtest.cpp
.cache/clangd/index/: buffer.cpp.36864EE46B24FE5C.idx  buffer.cpp.D0EB62AC048DB64E.idx  buffer.hpp.45431D9DB7B46DAE.idx  buffer.hpp.5A02FC06F28B6F65.idx  buffers.cpp.A98FB1D8A7D76D5F.idx  buffers.hpp.D6BF7C5710C19F12.idx  composers.cpp.4D35581344F35545.idx  composers.hpp.E6DA0B939EAEE1C5.idx  config.cpp.61E993B1DAC745D5.idx  config.hpp.7C35980D7710FEF0.idx  container.cpp.099E4A460F896723.idx  container.cpp.EC0D6BB6284E2070.idx  container.hpp.102986D4D649B6E8.idx  container.hpp.82472ABA251C6168.idx  containers.cpp.2A2BB375C69B5E63.idx  containers.hpp.E04EA4DB569BA178.idx  cursor.cpp.B9231AB6D2D0906F.idx  cursor.cpp.DA45A9969578BCBD.idx  cursor.hpp.48F7F7DEE629ABF0.idx  cursor.hpp.8C595B7FC64F2902.idx  drawcalls.cpp.82861D42F66E071F.idx  drawcalls.cpp.E456CD880B564A40.idx  drawcalls.hpp.61B6704924B533E3.idx  drawcalls.hpp.E9A3AA67FE663DBF.idx  drawing.cpp.5FCD075836A75EE7.idx  drawing.cpp.75F1145EF3314EBD.idx  drawing.hpp.279706362020BEE1.idx  drawing.hpp.340FCD6C4B3011AF.idx  effects.cpp.A078A386A382E460.idx  effects.cpp.DF9DECB9DD14269C.idx  effects.hpp.2BCDC8C41A5D9C7A.idx  effects.hpp.D4E9AA2DA224A958.idx  fit.cpp.27FEE866F805BCE7.idx  fit.hpp.6910655C7E7B5F6F.idx  horizontal.cpp.5BC9A41D65B35BBD.idx  horizontal.hpp.9225305958B60440.idx  id.cpp.646567A7DF8F3C18.idx  id.cpp.78F1108C58498DA4.idx  id.hpp.2D283DAF1F6C552C.idx  id.hpp.593A7620C53E9D2A.idx  (+52 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: annotated.html  buffer_8hpp.html  buffers_8hpp.html  cat.tagfile.xml  cat_8hpp.html  classcat_1_1_buffer.html  classcat_1_1_cat_string.html  classcat_1_1_container.html  classcat_1_1_positional.html  classcat_1_1_window.html  classcat_1_1lib_1_1_basic_shell.html  classcat_1_1lib_1_1_horizontal_container.html  classcat_1_1lib_1_1_input_field.html  classcat_1_1lib_1_1_lockable_buffer.html  classcat_1_1lib_1_1_scroll_buffer.html  composers_8hpp.html  concepts.html  config_8hpp.html  container_8hpp.html  containers_8hpp.html  cursor_8hpp.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  drawcalls_8hpp.html  drawing_8hpp.html  effects_8hpp.html  files.html  id_8hpp.html  index.html  input_8hpp.html  lifespan_8hpp.html  md__2home_2labricecat_2lab_2dev_2src_2cat_2_r_e_a_d_m_e.html  modules.html  namespacecat.html  namespacecat_1_1config.html  namespacecat_1_1effect.html  namespacecat_1_1effect_1_1base__colors.html  namespacecat_1_1effect_1_1ncurses__colors.html  namespacecat_1_1lib.html  namespacecat_1_1signals.html  namespacecat_1_1terminal.html  (+22 more)
examples/: container.cpp  example.cpp  shell.cpp
inc/: base.hpp  buffer.hpp  cat.hpp  config.hpp  cursor.hpp  drawcalls.hpp  drawing.hpp  effects.hpp  id.hpp  input.hpp  library.hpp  lifespan.hpp  settings.hpp  signals.hpp  terminal.hpp  unicode.hpp  vector.hpp  window.hpp
inc/base/: border.hpp  buffer.hpp  container.hpp  drawcalls.hpp  effects.hpp  id.hpp  input.hpp  lifespan.hpp  positional.hpp  settings.hpp  signals.hpp  string.hpp  string_iterator.hpp  unicode.hpp  vector.hpp  window.hpp
inc/buffer/: lockable.hpp  scrollable.hpp
inc/composer/: linenumbers.hpp
inc/container/: horizontal.hpp
inc/renderer/: fit.hpp
inc/window/: box.hpp  inputfield.hpp  textfield.hpp
src/: buffer.cpp  config.cpp  container.cpp  cursor.cpp  drawcalls.cpp  drawing.cpp  effects.cpp  id.cpp  input.cpp  lifespan.cpp  positional.cpp  settings.cpp  signals.cpp  string.cpp  string_iterator.cpp  terminal.cpp  vector.cpp  window.cpp
src/base/: border.cpp  buffer.cpp  container.cpp  cursor.cpp  drawcalls.cpp  drawing.cpp  effects.cpp  id.cpp  input.cpp  lifespan.cpp  positional.cpp  settings.cpp  signals.cpp  string.cpp  string_iterator.cpp  terminal.cpp  vector.cpp  window.cpp
src/buffer/: lockable.cpp  scrollable.cpp
src/composer/: linenumbers.cpp
src/container/: horizontal.cpp
src/renderer/: fit.cpp
src/window/: inputfield.cpp  textfield.cpp
